<resources>
    <string name="app_name">Laundry2</string>
    <string name="salam_pagi">Selamat Pagi, Viona!</string>
    <string name="salam_siang">Selamat Siang, Viona!</string>
    <string name="salam_malam">Selamat Malam, Viona!</string>
    <string name="tvEstimasi">Estimasi Hari Ini</string>
    <string name="tvTransaksi">Transaksi</string>
    <string name="tvPelanggan">Pelanggan</string>
    <string name="tvLaporan">Laporan</string>
    <string name="tvAkun">Akun</string>
    <string name="tvLayanan2">Layanan</string>
    <string name="tvTambahan">Tambahan</string>
    <string name="tvPegawai">Pegawai</string>
    <string name="tvCabang">Cabang</string>
    <string name="tvPrinter">Printer</string>
    <string name="tvServis">Siap melayani pelanggan dengan setulus hati</string>
    <string name="tvServis2">Jangan Kecewakan Pelanggan</string>
    <string name="tvTambahPegawai">Tambah Pegawai</string>
    <string name="tvNamaLengkap">Nama Lengkap</string>
    <string name="inputNamaLengkap">Nama Lengkap</string>
    <string name="tvAlamat">Alamat</string>
    <string name="inputAlamat">Alamat</string>
    <string name="validasi_etNama">Nama Tidak Boleh Kosong</string>
    <string name="validasi_etAlamat">Alamat Tidak Boleh Kosong</string>
    <string name="validasi_etNoHP">No HP Tidak Boleh Kosong</string>
    <string name="validasi_etCabang">Cabang Tidak Boleh Kosong</string>
    <string name="sukses_simpan_pelanggan">Sukses Simpan Pelanggan</string>
    <string name="gagal_simpan_pelanggan">Gagal simpan pelanggan</string>
    <string name="sukses_simpan_pegawai">Sukses Simpan Pegawai</string>
    <string name="gagal_simpan_pegawai">Gagal simpan pegawai</string>

</resources>

