<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pegawai.TambahPegawaiActivity">

    <TextView
        android:id="@+id/tvTambahPegawai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTambahPegawai"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvNamaLengkapPegawai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNamaLengkap"
        app:layout_constraintTop_toBottomOf="@+id/tvTambahPegawai"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etNamaLengkapPegawai"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputNamaLengkap"
        android:background="@drawable/radius"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvNamaLengkapPegawai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tvAlamatPegawai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvAlamat"
        app:layout_constraintTop_toBottomOf="@+id/etNamaLengkapPegawai"
        android:textSize="23sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30sp" />

    <EditText
        android:id="@+id/etAlamatPegawai"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputAlamat"
        android:background="@drawable/radius"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvAlamatPegawai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tvNoHPPegawai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="No HP Aktif"
        app:layout_constraintTop_toBottomOf="@+id/etAlamatPegawai"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30sp" />

    <EditText
        android:id="@+id/etNoHPPegawai"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="No HP Aktif"
        android:padding="12dp"
        android:background="@drawable/radius"
        app:layout_constraintTop_toBottomOf="@id/tvNoHPPegawai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tvCabangPegawai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Alamat"
        app:layout_constraintTop_toBottomOf="@+id/etNoHPPegawai"
        android:textSize="23sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30sp" />

    <EditText
        android:id="@+id/etCabangPegawai"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="Alamat"
        android:padding="12dp"
        android:background="@drawable/radius"
        app:layout_constraintTop_toBottomOf="@id/tvCabangPegawai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/btSimpan_TambahPegawai"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Simpan"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCabangPegawai"
        android:layout_marginTop="25dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>