<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2DCEF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvSalam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSalam"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvtanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTanggal"
        android:textSize="17sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSalam"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEstimasi"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvtanggal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvEstimasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvEstimasi"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#5A5A5A"/>

            <TextView
                android:id="@+id/tvHargaestimasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rp. 40.000,-"
                android:textSize="20sp"
                android:textColor="#5A5A5A"
                android:layout_gravity="end"
                android:layout_marginTop="-24dp"
                android:layout_marginEnd="8dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#E6E5E5"
                android:layout_marginTop="5dp"
                />

            <LinearLayout
                android:id="@+id/icons_Transaksi"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ivTransaksi"
                        android:layout_width="100dp"
                        android:layout_height="75dp"
                        android:src="@drawable/trolley"
                        android:layout_marginTop="10dp"/>


                    <TextView
                        android:id="@+id/tvTransaksi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvTransaksi"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="3dp"
                        android:textSize="17sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/icons_Pelanggan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ivPelanggan"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:src="@drawable/group_921347"
                        android:layout_marginTop="15dp"/>

                    <TextView
                        android:id="@+id/tvPelanggan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvPelanggan"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="3dp"
                        android:textSize="17sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/icons_Laporan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ivLaporan"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/note" />

                    <TextView
                        android:id="@+id/tvLaporan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/tvLaporan"
                        android:textSize="17sp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvServis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvServis"
        app:layout_constraintTop_toBottomOf="@+id/cvEstimasi"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvServis2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvServis2"
        app:layout_constraintTop_toBottomOf="@+id/tvServis"
        android:textSize="16dp"
        android:layout_marginStart="27dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvServis2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tvServis2"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAkun"
                android:layout_width="110dp"
                android:layout_height="130dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/person_16213525"
                        android:contentDescription="Akun Icon" />

                    <TextView
                        android:id="@+id/tvAkun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvAkun"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@android:color/black" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLayanan2"
                android:layout_width="120dp"
                android:layout_height="130dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/ivLayanan"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="Akun Icon"
                        android:src="@drawable/mesincuci" />

                    <TextView
                        android:id="@+id/tvLayanan2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/tvLayanan2"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvTambahan"
                android:layout_width="120dp"
                android:layout_height="130dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="60dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/plus_1828575"
                        android:contentDescription="Akun Icon" />

                    <TextView
                        android:id="@+id/tvTambahan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvTambahan"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                        android:textColor="@android:color/black" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tvServis2"
            android:layout_marginStart="18sp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPegawai"
                android:layout_width="110dp"
                android:layout_height="130dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/people_3239045"
                        android:contentDescription="Akun Icon" />

                    <TextView
                        android:id="@+id/tvPegawai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvPegawai"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:textColor="@android:color/black" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLayanan"
                android:layout_width="120dp"
                android:layout_height="130dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/ivCabang"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/home_9434495"
                        android:contentDescription="Akun Icon" />

                    <TextView
                        android:id="@+id/tvCabang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvCabang"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                        android:textColor="@android:color/black" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPrinter"
                android:layout_width="120dp"
                android:layout_height="130dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="60dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/printer_2395389"
                        android:contentDescription="Akun Icon" />

                    <TextView
                        android:id="@+id/tvPrinter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvPrinter"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>